--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 <ul id="chat-history-ul"></ul>
             </div>
             <form id="sendMessage" class="chat-message clearfix">
-                <input type="text" name="message-to-send" id="message-to-send" placeholder="Type your message" rows="1"></input>
+                <input type="text" name="message-to-send" id="message-to-send" placeholder="Type your message" rows="1" autocomplete="off"></input>
                 <input type="submit" value="Send"></input>
             </form>
             <!-- end chat-message -->
